Time: 2 ms (35.78%), Space: 44.9 MB (10.39%) - LeetHub